# codeforces-tester

./: .gitignore  .justfile  Cargo.toml  README.md  codeforces-tester.sublime-project  flake.nix
cli/: Cargo.toml  build.rs
cli/src/: args.rs  input.rs  lib.rs  main.rs
docs/: FAQ.md  cdf.toml
gui/: Cargo.toml
gui/resources/: window.ui
gui/src/: app.rs  errors.rs  lib.rs  main.rs
gui/src/widgets/: add_task.rs  add_test.rs  edit_task.rs  edit_tests.rs  mod.rs
lib/: Cargo.toml
lib/src/: config.rs  errors.rs  exec.rs  lib.rs
src/: args.rs  main.rs
