[workspace]
members = ["cli", "lib", "gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "codeforces-tester"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cdf"
path = "src/main.rs"

[features]
default = []
cli = ["dep:cli"]
gui = ["dep:gui"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
cli = { path = "cli", package = "codeforces-tester-cli", optional = true }
gui = { path = "gui", package = "codeforces-tester-gui", optional = true }
