[workspace]
members = ["cli", "lib", "gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "codeforces-tester"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cdf"
path = "src/main.rs"

[features]
default = []
gui = ["dep:gui"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.0"
cli = { path = "cli", package = "codeforces-tester-cli" }
gui = { path = "gui", package = "codeforces-tester-gui", optional = true }
